--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "start": "node server.js"
   },
+
+  "engines": {
+    "node": "16.9.0",
+    "npm": "7.21.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.1",
